--- a/info/docs.texi
+++ b/info/docs.texi
@@ -15,7 +15,7 @@ This chapter documents a total of 1144 commands and 147 options.
 * emacspeak::The Complete Audio Desktop.
 * emacspeak-2048::Speech-enable 2048 Game.
 * emacspeak-abc-mode::Speech-enable ABC-MODE.
-* emacspeak-actions::Emacspeak actions -- callbacks that can be associated with portions of a buffer.
+* emacspeak-actions::Emacspeak actions --.
 * emacspeak-add-log::Speech-enable add-log.
 * emacspeak-advice::Advice Emacs Core.
 * emacspeak-amark::BookMarks For Audio Content.
@@ -26,7 +26,7 @@ This chapter documents a total of 1144 commands and 147 options.
 * emacspeak-auctex::Speech enable AucTeX -- a powerful TeX/LaTeX authoring environment.
 * emacspeak-bbc::Light-Weight BBC Client.
 * emacspeak-bbdb::Speech enable BBDB -- a powerful address manager.
-* emacspeak-bibtex::Speech enable bibtex -- Supports maintaining bibliographies in bibtex format.
+* emacspeak-bibtex::Speech enable bibtex.
 * emacspeak-bookmark::Speech enable Emacs' builtin bookmarks.
 * emacspeak-bookshare::Speech-enabled  BOOKSHARE client.
 * emacspeak-browse-kill-ring::browse-kill-ring  for emacspeak desktop.
@@ -35,7 +35,7 @@ This chapter documents a total of 1144 commands and 147 options.
 * emacspeak-c::Speech enable CC-mode and friends -- supports C, C++, Java.
 * emacspeak-calc::Speech enable the Emacs Calculator -- a powerful symbolic algebra system.
 * emacspeak-calculator::Speech enable  desktop calculator.
-* emacspeak-calendar::Speech enable Emacs Calendar -- maintain a diary and appointments.
+* emacspeak-calendar::Speech enable Emacs Calendar.
 * emacspeak-calibredb::Speech-enable CALIBREDB.
 * emacspeak-chess::Speech-enable CHESS.
 * emacspeak-cider::Speech-enable CIDER, A Clojure IDE.
@@ -90,7 +90,7 @@ This chapter documents a total of 1144 commands and 147 options.
 * emacspeak-flyspell::Speech enable flyspell.
 * emacspeak-folding::Speech enable Folding Mode -- enables structured editing.
 * emacspeak-forge::Speech-enable FORGE.
-* emacspeak-forms::Speech enable Emacs' forms mode  -- provides  a convenient database interface.
+* emacspeak-forms::Speech enable Emacs' forms mode.
 * emacspeak-geiser::Speech-enable GEISER.
 * emacspeak-gh-explorer::Speech-enable GH-EXPLORER.
 * emacspeak-gnuplot::speech-enable gnuplot mode.
@@ -9118,8 +9118,10 @@ these additional interactive commands:
 @item @kbd{'} Speaks entire board.
 @end itemize
 
-Speaking cell neighbors uses appropriate clause boundaries to group  related cells --- neighbors are read left-to-right, top-to-bottom.
-Moving to the left/right edge of the board produces an appropriate auditory icon.
+Speaking cell neighbors uses appropriate clause boundaries to group
+related cells --- neighbors are read left-to-right, top-to-bottom.
+Moving to the left/right edge of the board produces an appropriate
+auditory icon.
 
 @subsection Emacspeak-Mines Commands
 
